SIS/force-app/main/default/objects/Lead/Lead.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>