SIS/force-app/main/default/objects/Lead/fields/Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Accommodation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accommodation</label>
    <type>Checkbox</type>
</CustomField>