SIS/force-app/main/default/objects/Lead/fields/Agreed_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Date_and_Time__c</fullName>
    <label>Agreed Date and Time</label>
    <type>DateTime</type>
</CustomField>