SIS/force-app/main/default/objects/Lead/fields/Application_For_Admissions_Form__c.field-meta.xml
<CustomField>
    <fullName>Application_For_Admissions_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application For Admissions Form</label>
    <type>Checkbox</type>
</CustomField>