SIS/force-app/main/default/objects/Lead/fields/Bursary__c.field-meta.xml
<CustomField>
    <fullName>Bursary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bursary</label>
    <type>Checkbox</type>
</CustomField>