SIS/force-app/main/default/objects/Lead/fields/Completed_Grade__c.field-meta.xml
<CustomField>
    <fullName>Completed_Grade__c</fullName>
    <label>Completed Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GRADE 1 / YEAR 1</fullName>
            </value>
            <value>
                <fullName>GRADE 2 / YEAR 2</fullName>
            </value>
            <value>
                <fullName>GRADE 3 / YEAR 3</fullName>
            </value>
            <value>
                <fullName>GRADE 4 / YEAR 4</fullName>
            </value>
            <value>
                <fullName>GRADE 5 / YEAR 5</fullName>
            </value>
            <value>
                <fullName>GRADE 6 / YEAR 6</fullName>
            </value>
            <value>
                <fullName>GRADE 7 / YEAR 7</fullName>
            </value>
            <value>
                <fullName>GRADE 8 / YEAR 8</fullName>
            </value>
            <value>
                <fullName>GRADE 9 / YEAR 9</fullName>
            </value>
            <value>
                <fullName>GRADE 10 / YEAR 10</fullName>
            </value>
            <value>
                <fullName>GRADE 11 / YEAR 11</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>