SIS/force-app/main/default/objects/Lead/fields/Current_School__c.field-meta.xml
<CustomField>
    <fullName>Current_School__c</fullName>
    <label>Current School</label>
    <length>100</length>
    <type>Text</type>
</CustomField>