SIS/force-app/main/default/objects/Lead/fields/Formatted_DOB__c.field-meta.xml
<CustomField>
    <fullName>Formatted_DOB__c</fullName>
    <formula>TEXT(Date_of_Birth__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted DOB</label>
    <type>Text</type>
</CustomField>