SIS/force-app/main/default/objects/Lead/fields/Initial_Application_Fee__c.field-meta.xml
<CustomField>
    <fullName>Initial_Application_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Application Fee</label>
    <type>Checkbox</type>
</CustomField>