SIS/force-app/main/default/objects/Lead/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>Intake_Master__c</referenceTo>
    <relationshipLabel>Child Leads</relationshipLabel>
    <relationshipName>Child_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>