SIS/force-app/main/default/objects/Lead/fields/Is_Duplicate_Student__c.field-meta.xml
<CustomField>
    <fullName>Is_Duplicate_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Duplicate Student?</label>
    <type>Checkbox</type>
</CustomField>