SIS/force-app/main/default/objects/Lead/fields/login_User_Is_Owner__c.field-meta.xml
<CustomField>
    <fullName>login_User_Is_Owner__c</fullName>
    <formula>$User.Id = Owner:User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>login User Is Owner?</label>
    <type>Checkbox</type>
</CustomField>