SIS/force-app/main/default/objects/Lead/fields/Lost_reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_reason__c</fullName>
    <label>Lost reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FEES RELATED</fullName>
            </value>
            <value>
                <fullName>SCHOLARSHIP RELATED</fullName>
            </value>
            <value>
                <fullName>LOCATION</fullName>
            </value>
            <value>
                <fullName>JOB RELATED</fullName>
            </value>
            <value>
                <fullName>FAMILY</fullName>
            </value>
            <value>
                <fullName>SIBLING REJECTION</fullName>
            </value>
            <value>
                <fullName>PROGRAMME</fullName>
            </value>
            <value>
                <fullName>BAD REVIEW/ WOM</fullName>
            </value>
            <value>
                <fullName>ACCOMMODATION/ FACILITIES</fullName>
            </value>
            <value>
                <fullName>UNWILLING TO DISCLOSE</fullName>
            </value>
            <value>
                <fullName>NOT ELIGIBLE TO JOIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>