SIS/force-app/main/default/objects/Lead/fields/Mobile_Phone_1__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_1__c</fullName>
    <label>Mobile Phone 1</label>
    <type>Phone</type>
</CustomField>