SIS/force-app/main/default/objects/Lead/fields/Mobile_Phone_3__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_3__c</fullName>
    <label>Mobile Phone 3</label>
    <type>Phone</type>
</CustomField>