SIS/force-app/main/default/objects/Lead/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Child Leads</relationshipLabel>
    <relationshipName>Child_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>