SIS/force-app/main/default/objects/Lead/fields/Parent_Email__c.field-meta.xml
<CustomField>
    <fullName>Parent_Email__c</fullName>
    <formula>IF(
  NOT(ISBLANK( Parent_Lead__c )),
    Parent_Lead__r.Email__c ,
    Parent_Account__r.Parent_Email_Address__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Email</label>
    <type>Text</type>
</CustomField>