SIS/force-app/main/default/objects/Lead/fields/Parent_Lead__c.field-meta.xml
<CustomField>
    <fullName>Parent_Lead__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Parent Lead</label>
    <referenceTo>Parent_Lead__c</referenceTo>
    <relationshipLabel>Child Leads</relationshipLabel>
    <relationshipName>Child_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>