SIS/force-app/main/default/objects/Lead/fields/Passport_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Passport_Expiry__c</fullName>
    <label>Passport Expiry</label>
    <type>Date</type>
</CustomField>