SIS/force-app/main/default/objects/Lead/fields/Passport_Issue_from__c.field-meta.xml
<CustomField>
    <fullName>Passport_Issue_from__c</fullName>
    <label>Passport Issue from</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nationality</valueSetName>
    </valueSet>
</CustomField>