SIS/force-app/main/default/objects/Lead/fields/Post_Application_Received__c.field-meta.xml
<CustomField>
    <fullName>Post_Application_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Application Email Received</label>
    <type>Checkbox</type>
</CustomField>