SIS/force-app/main/default/objects/Lead/fields/Preferred_Phone__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone__c</fullName>
    <defaultValue>&quot;Mobile Phone 1&quot;</defaultValue>
    <label>Preferred Phone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MOBILE PHONE 1</fullName>
                <default>true</default>
                <label>MOBILE PHONE 1</label>
            </value>
            <value>
                <fullName>MOBILE PHONE 2</fullName>
            </value>
            <value>
                <fullName>MOBILE PHONE 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>