SIS/force-app/main/default/objects/Lead/fields/Preferred_Phone_Value__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone_Value__c</fullName>
    <formula>CASE(
    TEXT(Preferred_Phone__c),
    &quot;MOBILE PHONE 1&quot;, Mobile_Phone_1__c,
    &quot;MOBILE PHONE 2&quot;, Mobile_Phone_2__c,
    &quot;MOBILE PHONE 3&quot;, Mobile_Phone_3__c,
    Mobile_Phone_1__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Phone Value</label>
    <type>Text</type>
</CustomField>