SIS/force-app/main/default/objects/Lead/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programme</label>
    <referenceTo>Programme_Master__c</referenceTo>
    <relationshipLabel>Child Leads</relationshipLabel>
    <relationshipName>Child_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>