SIS/force-app/main/default/objects/Lead/fields/Supporting_Document_Submission__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Document_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supporting Document Submission</label>
    <type>Checkbox</type>
</CustomField>