SIS/force-app/main/default/objects/Lead/fields/Unresponsive__c.field-meta.xml
<CustomField>
    <fullName>Unresponsive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unresponsive</label>
    <type>Checkbox</type>
</CustomField>