SIS/force-app/main/default/objects/Lead/fields/UpdatedDOB__c.field-meta.xml
<CustomField>
    <fullName>UpdatedDOB__c</fullName>
    <label>UpdatedDOB</label>
    <length>30</length>
    <type>Text</type>
</CustomField>