SIS/force-app/main/default/objects/Lead/fields/Visa__c.field-meta.xml
<CustomField>
    <fullName>Visa__c</fullName>
    <label>Visa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEPENDENT (DIPLOMATIC)</fullName>
            </value>
            <value>
                <fullName>DEPENDENT (EXPATRIATE/EMPLOYMENT)</fullName>
            </value>
            <value>
                <fullName>DEPENDENT (MM2H)</fullName>
            </value>
            <value>
                <fullName>DEPENDENT (RESIDENT PASS TALENT)</fullName>
            </value>
            <value>
                <fullName>DIPLOMATIC PASS</fullName>
            </value>
            <value>
                <fullName>EMPLOYMENT PASS</fullName>
            </value>
            <value>
                <fullName>EXEMPTED (MAIN PROGRAMME)</fullName>
            </value>
            <value>
                <fullName>EXEMPTED (MC)</fullName>
            </value>
            <value>
                <fullName>EXEMPTED (ODL)</fullName>
            </value>
            <value>
                <fullName>MALAYSIAN PR</fullName>
            </value>
            <value>
                <fullName>MM2H</fullName>
            </value>
            <value>
                <fullName>PERMISSION TO STUDY</fullName>
            </value>
            <value>
                <fullName>PREVIOUS INSTITUTION STP</fullName>
            </value>
            <value>
                <fullName>RESIDENCE PASS</fullName>
            </value>
            <value>
                <fullName>SOCIAL PASS</fullName>
            </value>
            <value>
                <fullName>SPECIAL PASS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>