SIS/force-app/main/default/objects/Lead/validationRules/SIS_Date_of_Birth.validationRule-meta.xml
<ValidationRule>
    <fullName>SIS_Date_of_Birth</fullName>
    <active>true</active>
    <errorConditionFormula>Date_of_Birth__c  &gt;=  TODAY()</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>The Date of Birth must not be a future date.</errorMessage>
</ValidationRule>