SIS/force-app/main/default/objects/Lead/validationRules/SIS_Email_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SIS_Email_Format_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Email)),
    NOT(REGEX(Email, &quot;^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Please enter a valid email address.</errorMessage>
</ValidationRule>