SIS/force-app/main/default/objects/Lead/validationRules/SIS_LostReasonmandatoryLeadStatusisLost.validationRule-meta.xml
<ValidationRule>
    <fullName>SIS_LostReasonmandatoryLeadStatusisLost</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
        TEXT(Status)=&quot;LOST&quot;,
        ISBLANK(TEXT(Lost_reason__c)) 
 )</errorConditionFormula>
    <errorDisplayField>Lost_reason__c</errorDisplayField>
    <errorMessage>Lost Reason is required when the Lead Status is Lost.</errorMessage>
</ValidationRule>