SIS/force-app/main/default/objects/Lead/validationRules/SIS_Parent_Lead_or_Account_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>SIS_Parent_Lead_or_Account_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
ISBLANK(Parent_Lead__c),
ISBLANK(Parent_Account__c)
),
AND(
NOT(ISBLANK(Parent_Lead__c)),
NOT(ISBLANK(Parent_Account__c))
)
)</errorConditionFormula>
    <errorMessage>Either a Parent Lead or a Parent Account is required.</errorMessage>
</ValidationRule>