SIS/force-app/main/default/objects/Lead/validationRules/SIS_Validate_Mobile_Number_2.validationRule-meta.xml
<ValidationRule>
    <fullName>SIS_Validate_Mobile_Number_2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK( Mobile_Phone_2__c)),
  NOT(REGEX( Mobile_Phone_2__c, &quot;^\\+?[0-9]{10,12}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Mobile_Phone_2__c</errorDisplayField>
    <errorMessage>Enter a valid number with 10 to 12 digits.</errorMessage>
</ValidationRule>