SIS/force-app/main/default/objects/Lead/listViews/SIS_Queue_For_International_Students_Lead.listView-meta.xml
<ListView>
    <fullName>SIS_Queue_For_International_Students_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>SIS_Queue For International Students</label>
    <queue>SIS_Queue_For_International_Students</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>